@@ -28,7 +28,10 @@ Improved debugging:
 -Added breakpoint action "reset-tstatp"
 -Added SEG0, SEG1, ... SEG7 variables to match TBBlue MMU pages
 
-Improved Chloe emulation: Support CPU speed setting via the ZX-Uno SCANDBLCTRL register
+Improved Chloe emulation: 
+-Support CPU speed setting via the ZX-Uno SCANDBLCTRL register
+-Load unodos3.rom as the default divmmc firmware
+-Added chloehd.mmc in the extras package
 
 
 Fixed ZRCP bugs:
